--- a/_sass/color_schemes/dustup.scss
+++ b/_sass/color_schemes/dustup.scss
@@ -1,7 +1,7 @@
 @import "./color_schemes/light";
 
 $color-scheme: light !default;
-$body-background-color: $white !default;
+$body-background-color: $grey-dk-300 !default;
 $body-heading-color: $grey-dk-300 !default;
 $body-text-color: $grey-dk-100 !default;
 $link-color: $red-000 !default;
