--- a/_sass/color_schemes/dustup.scss
+++ b/_sass/color_schemes/dustup.scss
@@ -6,7 +6,7 @@ $body-heading-color: $grey-dk-300 !default;
 $body-text-color: $grey-dk-100 !default;
 $link-color: $red-000 !default;
 $nav-child-link-color: $grey-dk-100 !default;
-$sidebar-color: $grey-lt-000 !default;
+$sidebar-color: #b64242 !default;
 $base-button-color: #f7f7f7 !default;
 $btn-primary-color: $purple-100 !default;
 $code-background-color: $grey-lt-000 !default;
