--- a/_sass/color_schemes/dustup.scss
+++ b/_sass/color_schemes/dustup.scss
@@ -1,4 +1,4 @@
-@import "./color_schemes/dustup";
+@import "./color_schemes/light";
 
 $color-scheme: dustup !default;
 $body-background-color: $grey-dk-300 !default;
