--- a/_sass/color_schemes/dustup.scss
+++ b/_sass/color_schemes/dustup.scss
@@ -1,15 +1,15 @@
 @import "./color_schemes/light";
 
-$body-background-color: #faf8f8 !default;
-$body-heading-color: #faf8f8 !default;
-$body-text-color: #2b2622 !default;
-$link-color: #bf4526 !default;
-$nav-child-link-color: $grey-dk-100 !default;
-$sidebar-color: #b64242 !default;
-$base-button-color: #f7f7f7 !default;
-$btn-primary-color: #6b5ae6 !default;
-$code-background-color: #e7dddd !default;
-$feedback-color: darken($sidebar-color, 3%) !default;
-$table-background-color: $white !default;
-$search-background-color: $white !default;
-$search-result-preview-color: $grey-dk-000 !default;
+$body-background-color: #faf8f8 ;
+$body-heading-color: #faf8f8 ;
+$body-text-color: #2b2622;
+$link-color: #bf4526;
+$nav-child-link-color: $grey-dk-100;
+$sidebar-color: #b64242;
+$base-button-color: #f7f7f7;
+$btn-primary-color: #6b5ae6;
+$code-background-color: #e7dddd ;
+$feedback-color: darken($sidebar-color, 3%);
+$table-background-color: $white;
+$search-background-color: $white;
+$search-result-preview-color: $grey-dk-000;
