--- a/_sass/color_schemes/dustup.scss
+++ b/_sass/color_schemes/dustup.scss
@@ -1,14 +1,14 @@
 @import "./color_schemes/light";
 
 $body-background-color: #faf8f8 ;
-$body-heading-color: #faf8f8 ;
-$body-text-color: #2b2622;
+$body-heading-color: #2b2622 ;
+$body-text-color: #554a40;
 $link-color: #bf4526;
 $nav-child-link-color: $grey-dk-100;
-$sidebar-color: #b64242;
+$sidebar-color: #faf8f8;
 $base-button-color: #f7f7f7;
 $btn-primary-color: #6b5ae6;
-$code-background-color: #e7dddd ;
+$code-background-color: #faf8f8 ;
 $feedback-color: darken($sidebar-color, 3%);
 $table-background-color: $white;
 $search-background-color: $white;
