--- a/_sass/color_schemes/dustup.scss
+++ b/_sass/color_schemes/dustup.scss
@@ -1,6 +1,6 @@
 @import "./color_schemes/light";
 
-$color-scheme: 'dustup' !default;
+$color-scheme: dustup !default;
 $body-background-color: $grey-dk-300 !default;
 $body-heading-color: $grey-dk-300 !default;
 $body-text-color: $grey-dk-100 !default;
